--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery.easing": "^1.4.1",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
+    "to-string-loader": "^1.1.5",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
