--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.8.0",
     "datatables.net-bs4": "1.10.19",
@@ -15,11 +16,15 @@
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "to-string-loader": "^1.1.5",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.1",
+    "vue-router": "^3.0.7",
+    "vue-template-compiler": "^2.6.10"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "css-loader": "^3.0.0",
+    "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
