--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
+    "vue-sweetalert2": "^2.1.1",
     "vue-template-compiler": "^2.6.10"
   },
   "version": "0.1.0",
