--- a/package.json
+++ b/package.json
@@ -7,21 +7,27 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "accounting-js": "^1.1.1",
     "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.8.0",
     "datatables.net-bs4": "1.10.19",
     "jquery": "3.4.1",
     "jquery.easing": "^1.4.1",
+    "moment": "^2.24.0",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "to-string-loader": "^1.1.5",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.10",
+    "vue-draggable": "^2.0.2",
+    "vue-events": "^3.1.0",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
     "vue-sweetalert2": "^2.1.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuedraggable": "^2.23.0",
+    "vuetable-2": "^1.7.5"
   },
   "version": "0.1.0",
   "devDependencies": {
