--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-events": "^3.1.0",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
+    "vue-select": "^3.1.0",
     "vue-sweetalert2": "^2.1.1",
     "vue-template-compiler": "^2.6.10",
     "vuedraggable": "^2.23.0",
