--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "chart.js": "2.8.0",
     "datatables.net-bs4": "1.10.19",
     "jquery": "3.4.1",
+    "jquery-mousewheel": "^3.1.13",
     "jquery.easing": "^1.4.1",
     "moment": "^2.24.0",
+    "multiselect": "^0.9.12",
+    "photoswipe": "^4.1.3",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
+    "select2": "^4.0.8",
     "to-string-loader": "^1.1.5",
     "turbolinks": "^5.2.0",
     "v-select2-component": "^0.3.8",
